service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /
    prometheus.io/port: '8081'
spec:
  selector:
    app: nexus
  type: ClusterIP
  ports:
  - name: nexus
    protocol: TCP
    port: 8081
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker
  namespace: nexus
spec:
  selector:
    app: nexus
  type: ClusterIP
  ports:
  - name: docker
    protocol: TCP
    port: 8082
    targetPort: 8082
