ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-web
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    cert-manager.io/cluster-issuer: dns-clusterissuer
spec:
  rules:
    - host: repo.thejimnicholson.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus
                port: 
                  number: 8081
  tls:
    - hosts:
        - repo.thejimnicholson.com
      secretName: repo-thejimnicholson-com
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-registry
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    cert-manager.io/cluster-issuer: dns-clusterissuer
spec:
  rules:
    - host: registry.thejimnicholson.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-docker
                port: 
                  number: 8082
  tls:
    - hosts:
        - registry.thejimnicholson.com
      secretName: registry-thejimnicholson-com
